Removed windows end-of-line characters. Added 'extra_classes' option to slide's div class.

--- a/src/pydozeoff/conf/slideshow_template/themes/template.html
+++ b/src/pydozeoff/conf/slideshow_template/themes/template.html
@@ -47,7 +47,7 @@
 <div class="presentation">
 
 {% for slide in slides %}
-<div class="slide {{ slide.classes }}">
+<div class="slide {{ slide.classes }} {{ slide.extra_classes }}">
     {{ slide.content }}
 </div>
 {% endfor %}
